--- a/capture/NewWindowPage.xaml
+++ b/capture/NewWindowPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page
+    x:Name="NewWindow"
     x:Class="capture.NewWindowPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,28 +9,52 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <StackPanel Orientation="Horizontal">
-            <Button Click="Button_ClickAsync" Background="White" Padding="5">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE840;"/>
-                </StackPanel>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="250"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="320" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Canvas Name="Container" 
+            Grid.Column="0"
+            Grid.Row="1"
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            Margin="245,0" 
+            Height="320"  Width="640">
+            <Rectangle Name="Target" 
+                    Fill="#FF0000" 
+                    Stroke="Black" 
+                    StrokeThickness="0"
+                    Height="320" Width="640" />
+        </Canvas>
+        <Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button Name="buttonClear" 
+                Grid.Row="0"
+                Content="Clear"
+                Foreground="White"
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch">
             </Button>
-            <Button Click="ScreenshotButton_ClickAsync" Background="White" Padding="5">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE722;"/>
-                </StackPanel>
-            </Button>
-            <Button Click="RecordButton_Click" Background="White" Padding="5">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE714;"/>
-                </StackPanel>
-            </Button>
-            <Button Background="White" Padding="5">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xF83B;"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
+            <ScrollViewer Name="eventLogScrollViewer" Grid.Row="1" 
+                        VerticalScrollMode="Auto" 
+                        Background="Black">
+                <RichTextBlock Name="eventLog"  
+                        TextWrapping="Wrap" 
+                        Foreground="#FFFFFF" 
+                        ScrollViewer.VerticalScrollBarVisibility="Visible" 
+                        ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                        Grid.ColumnSpan="2">
+                </RichTextBlock>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Page>
